@@ -17,6 +17,11 @@
 	gtk/Graphics/UI/Gtk/Windows/Dialog.chs.pp: rename some .chs files to
 	.chs.pp	files in preparation for adding bits conditional on Gtk+ 2.8.
 
+	* Makefile.am: Rename the above files. Also, only compile the
+	filechooser demo if the glade package was built.
+
+	* configure.ac: Add cases for Gtk+ 2.8.
+
 2005-08-20  Axel Simon <A.Simon@kent.ac.uk>
 
 	* glib/System/Glib/UTFString.hs, gtk/Graphics/UI/Gtk.hs,
